<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hands Free Workout</string>
    <string name="action_settings">Settings</string>
    <string name="textView_text">Press start to begin</string>
    <string name="startButton_text">Resume</string>
    <string name ="startButton_initial_text">Start</string>
    <string name="stopButton_text">Stop</string>
    <string name="pauseButton_text">Pause</string>
    <string name="initialTime">0 seconds</string>
    <string name="programName">HandsFree Workout</string>
    <string name="notificationText">Program is in danger!</string>
    <string name="notificationTicker">Important!</string>
    <string name="exitText">You are about to leave your workout!  Continue?</string>
    <string name="dialogPositive">I\'m over it</string>
    <string name="dialogNegative">Nope jk!</string>
    <string name="welcomeTitleV2">Pick one to get started</string>
    <string name = "distanceOption">Distance Run</string>
    <string name = "option">+</string>
    <string name = "distanceOptionDescription">Run until you can\'t!  We\'ll track how far you go and how long you take.</string>
	<string name = "intervalOption">Interval Run</string>
	<string name = "intervalOptionDescription">Focus all your effort into completing each interval.  Just set how many you\'d like to do and how long you\'d like to do it and we\'ll keep you on track. </string>
	<string name = "customTitleStart">Select One</string>
	<string name = "customStartButtonText"> Begin </string>
</resources>
